Make legend large to stop wrapping

--- a/vegancity/static/css/vendors.css
+++ b/vegancity/static/css/vendors.css
@@ -211,7 +211,7 @@ h5 {
   z-index: 10;
   background-color: #fff;
   height: 160px;
-  width: 168px;
+  width: 175px;
   border: 2px solid #444;
 }
 
